--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-GCMTools Suite
+GCMTools Suite (original readme)
 http://gcmtool.sourceforge.net
 
 The GCMTools are a suite of tools to basically rip apart your gamecube games
@@ -34,5 +34,5 @@ I wouldn't have been able to do this project without it.
 Also Mr. Spiv for porting doltool to OSX so I could check my work in my 
 own code against something.
 
-Better documentation is available online on the webstie at the top of this
+Better documentation is available online on the website at the top of this
 document.
