--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+2015/7/25
+Patched to build on mac os x 10.10+ (might work on linux/windows, but is untested)
+
 2004/7/4 (0.3.0)
 There are now 5 executables in this package:
 	gcmtool
